@@ -1,4 +1,6 @@
 NEXT RELEASE
+ - In addition to accepting an Array, o.DuckType now accepts an Object,
+   allowing for type checking.
  - Added o.PatternType for creating types that match against a RegExp.
 
 0.0.7 : 2013-06-18
